--- a/index.html
+++ b/index.html
@@ -15,16 +15,44 @@
   <script src="app.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
   <style>
+    body {
+      font-family: "Prompt", sans-serif;
+      background-image: url("./images/Zircon.jpg");
+    }
+
     .nav-wrapper {
       /* keeps center wrapper centered and 1200px */
       max-width: 1200px;
       /* center element */
       margin: 0 auto;
-      padding: 15px 20px;
       margin-top: 30px;
+      padding: 15px 20px;
       display: grid;
       grid-template-columns: 30% auto;
-      background-color: red;
+    }
+
+    .nav-wrapper a {
+      letter-spacing: .1em;
+      text-decoration: none;
+      font-weight: bold;
+      color: #000;
+    }
+
+    .nav-wrapper a:hover {
+      cursor: pointer;
+      color: #eee;
+    }
+
+    .list-item {
+      margin-left: 10px;
+      text-transform: uppercase;
+      padding: 10px;
+      color: #000;
+    }
+
+    .logo {
+      font-weight: bold;
+      font-size: 24px;
     }
 
     .nav-wrapper ul li {
@@ -58,10 +86,19 @@
         "contentMain contentMain contentSub";
     }
 
+    .wrapper>.featured,
+    .wrapper>.sub-featured>div,
+    .wrapper>.main-content,
+    .wrapper>.main-sidebar {
+      padding: 20px;
+    }
+
     .featured {
       grid-area: featuredMain;
       min-height: 500px;
       background-color: purple;
+      display: grid;
+      align-content: flex-end;
     }
 
     .sub-featured {
@@ -132,7 +169,57 @@
     }
 
     /* MOBILE MEDIA QUERY */
-    @media screen and (max-width: 690px) {}
+    @media screen and (max-width: 690px) {
+      .logo {
+        grid-column: 1/3;
+
+      }
+
+      .nav-items {
+        grid-column: 1/5;
+        text-align: center;
+      }
+
+      .nav-wrapper ul {
+        padding: 0;
+      }
+
+      .nav-wrapper ul li {
+        display: block;
+      }
+
+      .burger-icon {
+        display: inline-block;
+        justify-self: end;
+        grid-column: 4/5;
+        border: 2px solid #333;
+        color: #333;
+        padding: 10px;
+        font-weight: bold;
+        border-radius: 3px;
+      }
+
+      .burger-icon:hover {
+        cursor: pointer;
+      }
+
+      .wrapper {
+        grid-template-areas:
+          "featuredMain featuredMain featuredMain"
+          "contentMain contentMain contentMain"
+          "featuredSub featuredSub featuredSub"
+          "contentSub contentSub contentSub"
+        ;
+      }
+
+      .sub-featured {
+        grid-template-columns: 1fr;
+      }
+
+      .footer>div {
+        grid-column: 1/-1
+      }
+    }
   </style>
 </head>
 
