--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <!-- <link rel="stylesheet" href="styles.css"> -->
+  <link rel="stylesheet" href="styles2.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
@@ -14,213 +15,7 @@
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="app.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
-  <style>
-    body {
-      font-family: "Prompt", sans-serif;
-      background-image: url("./images/Zircon.jpg");
-    }
 
-    .nav-wrapper {
-      /* keeps center wrapper centered and 1200px */
-      max-width: 1200px;
-      /* center element */
-      margin: 0 auto;
-      margin-top: 30px;
-      padding: 15px 20px;
-      display: grid;
-      grid-template-columns: 30% auto;
-    }
-
-    .nav-wrapper a {
-      letter-spacing: .1em;
-      text-decoration: none;
-      font-weight: bold;
-      color: #000;
-    }
-
-    .nav-wrapper a:hover {
-      cursor: pointer;
-      color: #eee;
-    }
-
-    .list-item {
-      margin-left: 10px;
-      text-transform: uppercase;
-      padding: 10px;
-      color: #000;
-    }
-
-    .logo {
-      font-weight: bold;
-      font-size: 24px;
-    }
-
-    .nav-wrapper ul li {
-      display: inline;
-      list-style-type: none;
-    }
-
-    .nav-items {
-      text-align: right;
-      padding-top: 10px;
-    }
-
-    .main-wrapper {
-      max-width: 1200px;
-      /* center element */
-      margin: 0 auto;
-    }
-
-    .burger-icon {
-      display: none;
-    }
-
-    .wrapper {
-      max-width: 100%;
-      margin: auto;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 10px;
-      grid-template-areas:
-        "featuredMain featuredMain featuredSub"
-        "contentMain contentMain contentSub";
-    }
-
-    .wrapper>.featured,
-    .wrapper>.sub-featured>div,
-    .wrapper>.main-content,
-    .wrapper>.main-sidebar {
-      padding: 20px;
-    }
-
-    .featured {
-      grid-area: featuredMain;
-      min-height: 500px;
-      background-color: purple;
-      display: grid;
-      align-content: flex-end;
-    }
-
-    .sub-featured {
-      grid-area: featuredSub;
-      background-color: blue;
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-gap: 10px;
-    }
-
-    .sub1 {
-      background-color: green;
-    }
-
-    .sub2 {
-      background-color: green;
-    }
-
-    .sub3 {
-      background-color: green;
-    }
-
-    .main-content {
-      grid-area: contentMain;
-      background-color: orange;
-    }
-
-    .main-sidebar {
-      grid-area: contentSub;
-      background-color: yellow;
-    }
-
-    .footer {
-      display: grid;
-      margin: 0 auto;
-      grid-template-columns: minmax(20px, 300px) minmax(20px, 300px) minmax(20px, 300px) minmax(20px, 300px);
-      justify-content: center;
-      grid-template-rows: 1fr 1fr;
-      background-color: #333;
-      color: #fff;
-    }
-
-    /* TABLET MEDIA QUERY */
-    @media screen and (max-width: 950px) {
-      .wrapper {
-        grid-template-areas: "featuredMain featuredMain featuredMain"
-          "featuredSub featuredSub featuredSub"
-          "contentMain contentMain contentSub";
-      }
-
-      .sub-featured {
-        grid-template-columns: repeat(3, 1fr);
-      }
-
-      .nav-items {
-        grid-column: 1/5;
-        text-align: center;
-      }
-
-      .logo {
-        grid-column: 1/5;
-        text-align: center;
-      }
-
-      .nav-wrapper {
-        margin-top: 0px;
-      }
-    }
-
-    /* MOBILE MEDIA QUERY */
-    @media screen and (max-width: 690px) {
-      .logo {
-        grid-column: 1/3;
-
-      }
-
-      .nav-items {
-        grid-column: 1/5;
-        text-align: center;
-      }
-
-      .nav-wrapper ul {
-        padding: 0;
-      }
-
-      .nav-wrapper ul li {
-        display: block;
-      }
-
-      .burger-icon {
-        display: inline-block;
-        justify-self: end;
-        grid-column: 4/5;
-        border: 2px solid #333;
-        color: #333;
-        padding: 10px;
-        font-weight: bold;
-        border-radius: 3px;
-      }
-
-      .burger-icon:hover {
-        cursor: pointer;
-      }
-
-      .wrapper {
-        grid-template-areas:
-          "featuredMain featuredMain featuredMain"
-          "contentMain contentMain contentMain"
-          "featuredSub featuredSub featuredSub"
-          "contentSub contentSub contentSub"
-        ;
-      }
-
-      .sub-featured {
-        grid-template-columns: 1fr;
-      }
-
-      .footer>div {
-        grid-column: 1/-1
-      }
-    }
-  </style>
 </head>
 
 <body>
