show hide menu, styling

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <!-- <link rel="stylesheet" href="styles.css"> -->
-  <link rel="stylesheet" href="styles2.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
@@ -29,7 +28,7 @@
       <li class="list-item"><a href="#">Gallery</a></li>
       <li class="list-item"><a href="#">Articles</a></li>
       <li class="list-item"><a href="#">About us</a></li>
-      <li class="list-item"><a href="#">Products</a></li>
+      <!-- <li class="list-item"><a href="#">Products</a></li> -->
       <li class="list-item"><a href="#">Contact</a></li>
     </ul>
   </nav>
@@ -37,8 +36,8 @@
     <div class="wrapper">
       <div class="featured">
         <div id="meta">Author Meta</div>
-        <h1>This is a main headline for your most important article.</h1>
-        <span id="hero-date">October 2, 2018</span>
+        <h1>Main headline pertaining to the automobile industry</h1>
+        <span id="hero-date">October 8, 2021</span>
       </div>
       <div class="sub-featured">
         <div class="sub1">
@@ -52,34 +51,24 @@
         </div>
       </div>
       <div class="main-content">
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
-          texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
-          small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-          paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing
-          has no control about the blind texts it is an almost unorthographic life One day however a small line of blind
-          text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not
-          to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little
-          Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the
-          way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her
-          hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.
-          Pityful a rethoric question ran over her cheek, then</p>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
-          texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A
-          small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-          paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing
-          has no control about the blind texts it is an almost unorthographic life One day however a small line of blind
-          text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not
-          to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little
-          Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the
-          way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her
-          hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.
-          Pityful a rethoric question ran over her cheek, then</p>
+        <p>Lucas ipsum dolor sit amet chiss calamari borvo cato thrawn choka luuke amidala shaddaa dagobah. Quarren
+          jettster luminara ig-88 ssi-ruuk obi-wan darth mandell. Hutt gerb castell thennqora rieekan barabel timoliini.
+          Chewbacca talortai vima-da-boda c-3po iego shaddaa terentatek kor-uj. Winter abregado malastare gerb pavan
+          taung. Senex jade isard quelli jax cornelius melodie. Qrygg vestara ongree senex. Rahn hoth neimoidian
+          vulptereen. Fisto golda drovian kit. Kel luke moff fett klaatu pellaeon. Rieekan firmus moor talz.
+        </p>
+        <p>
+          Tatooine gorith cerean subterrel secura davin echani glymphid. Wicket tusken raider cerean yavin djo. Bib
+          grodin barriss thakwaash bane gorith tc-14 sullustan. Corellia k-3po veers aayla darth. Muun aruzan isolder
+          tierce lahara. Tano nadon hutt nunb naberrie nal amedda wampa. Maris kwi zam ponda. Moore deliah lytton organa
+          snootles. Bimm hssis ric vao lowbacca hutta neti tarpals. Frozarns mara kit opress elom jerec cad jabba kohl.
+          Bothan tion di thrawn yarael. Sarn maul ablajeck wharl zhell thakwaash sabé annoo.
+        </p>
       </div>
       <div class="main-sidebar">
         <div class="email-digest-subscription">
           <h2>Weekly Email Update</h2>
-          <p>Subscribe below and we’ll send you a weekly email summary of our latest and gratest gadgets and all of the
-            spam that you'll be able to handle!</p>
+          <p>Subscribe below recently with desktop publishing software like Aldus</p>
           <form id="subscribe" action="#" accept-charset="UTF-8" method="post">
             <input placeholder="Email Address" class="email" name="email" id="email" type="email">
             <button name="button" type="submit" class="subscribe">Subscribe Me</button>
@@ -92,27 +81,27 @@
     <div class="foot1">
       <h3 class="logo">Atomic Systems</h3>
       <br />
-      <p>345 Street Suite 34</p>
-      <p>New York, Germany</p>
+      <p>345 Strasse # 34</p>
+      <p>Berlin, Germany</p>
       <br />
-      <p>545-456-4565</p>
+      <p>555-555-5555</p>
     </div>
     <div class="foot2">
-      <h4>Awesome Links</h4>
+      <h4>Links</h4>
       <ul class="fa-ul social-footer">
-        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>List icons can</li>
-        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>be used to</li>
-        <li><span class="fa-li"><i class="fas fa-spinner fa-pulse"></i></span>replace bullets</li>
-        <li><span class="fa-li"><i class="far fa-square"></i></span>in lists</li>
+        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>List icons</li>
+        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>List icons</li>
+        <li><span class="fa-li"><i class="far fa-square"></i></span>List icons</li>
+        <li><span class="fa-li"><i class="far fa-square"></i></span>List icons</li>
       </ul>
     </div>
     <div class="foot3">
-      <h4>Blurbs</h4>
+      <h4>Extra</h4>
     </div>
     <div class="foot4">
       <h4>Social Media</h4>
     </div>
-    <div class="copyright">StudentWebHosting.com &copy; 2018</div>
+    <div class="copyright">nuclearsystems.com &copy; 2021</div>
   </footer>
 </body>
 
