--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="app.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
-
 </head>
 
 <body>
   <nav class="nav-wrapper">
     <div class="logo">
-      <i class="fas fa-atom"></i> <strong>Atomic Systems</strong>
+      <i style="font-size: 38px;" class="fa-solid fa-radiation"></i> <strong>Atomic Systems</strong>
     </div>
     <div class="burger-icon"><i class="fas fa-bars"></i> MENU</div>
     <ul class="nav-items main-nav mobile-hide">
@@ -69,7 +66,7 @@
         <div class="email-digest-subscription">
           <h2>Weekly Email Update</h2>
           <p>Subscribe below recently with desktop publishing software like Aldus</p>
-          <form id="subscribe" action="#" accept-charset="UTF-8" method="post">
+          <form>
             <input placeholder="Email Address" class="email" name="email" id="email" type="email">
             <button name="button" type="submit" class="subscribe">Subscribe Me</button>
           </form>
@@ -79,6 +76,7 @@
   </div>
   <footer class="footer">
     <div class="foot1">
+      <i style="font-size: 38px;" class="fa-solid fa-radiation"></i>
       <h3 class="logo">Atomic Systems</h3>
       <br />
       <p>345 Strasse # 34</p>
