--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="main-wrapper">
     <div class="wrapper">
       <div class="featured">
-        <div id="meta">Author Meta</div>
+        <div id="meta">by Larrie Jones</div>
         <h1>Main headline pertaining to the automobile industry</h1>
         <span id="hero-date">October 8, 2021</span>
       </div>
