--- a/index.html
+++ b/index.html
@@ -33,22 +33,23 @@
     <div class="wrapper">
       <div class="featured">
         <div id="meta">by Larrie Jones</div>
-        <h1>Main headline pertaining to the automobile industry</h1>
+        <h1>Exciting new concepts in the automobile industry</h1>
         <span id="hero-date">October 8, 2021</span>
       </div>
       <div class="sub-featured">
         <div class="sub1">
-          <h3>Something Great</h3>
+          <h3>Technology Today</h3>
         </div>
         <div class="sub2">
-          <h3>This Couldn't Be Better</h3>
+          <h3>Fashion Week</h3>
         </div>
         <div class="sub3">
-          <h3>Wait Until 3</h3>
+          <h3>Sports Data</h3>
         </div>
       </div>
       <div class="main-content">
-        <p>Lucas ipsum dolor sit amet chiss calamari borvo cato thrawn choka luuke amidala shaddaa dagobah. Quarren
+        <p>Breakpoints: tablet: 950, mobile: 690 ... Lucas ipsum dolor sit amet chiss calamari borvo cato thrawn choka
+          luuke amidala shaddaa dagobah. Quarren
           jettster luminara ig-88 ssi-ruuk obi-wan darth mandell. Hutt gerb castell thennqora rieekan barabel timoliini.
           Chewbacca talortai vima-da-boda c-3po iego shaddaa terentatek kor-uj. Winter abregado malastare gerb pavan
           taung. Senex jade isard quelli jax cornelius melodie. Qrygg vestara ongree senex. Rahn hoth neimoidian
@@ -65,7 +66,7 @@
       <div class="main-sidebar">
         <div class="email-digest-subscription">
           <h2>Weekly Email Update</h2>
-          <p>Subscribe below recently with desktop publishing software like Aldus</p>
+          <p>Subscribe below to receive our weekly email update</p>
           <form>
             <input placeholder="Email Address" class="email" name="email" id="email" type="email">
             <button name="button" type="submit" class="subscribe">Subscribe Me</button>
