--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>CSS Grid Template Study | Local Build v1.0</title>
+  <title>CSS Grid Template Study | local build v1.0</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -100,7 +100,7 @@
     <div class="foot4">
       <h4>Social Media</h4>
     </div>
-    <div class="copyright">nuclearsystems.com &copy; 2021</div>
+    <div class="copyright">atomic systems &copy; 2021</div>
   </footer>
 </body>
 
